Fixed Pax Exam Test Errors. Added Felix dependency but getting Constraint error.